@startuml

title __EJEMPLOS's Class Diagram__\n

  namespace Ejercicios.Ejemplos {
    class Ejercicios.Ejemplos.AgentTry {
        # setup()
        # takeDown()
    }
  }
  

  namespace Ejercicios.Ejemplos {
    class Ejercicios.Ejemplos.ContadorExternoBehaviour {
        - agent : Agent
        - contador : int
        + ContadorExternoBehaviour()
        + action()
        + done()
        + onStart()
    }
  }
  

  namespace Ejercicios.Ejemplos {
    class Ejercicios.Ejemplos.ContadorExternoCyclicBehaviour {
        - agent : Agent
        - contador : int
        + ContadorExternoCyclicBehaviour()
        + action()
        + onStart()
    }
  }
  

  Ejercicios.Ejemplos.AgentTry -up-|> jade.core.Agent
  Ejercicios.Ejemplos.ContadorExternoBehaviour -up-|> jade.core.behaviours.Behaviour
  Ejercicios.Ejemplos.ContadorExternoCyclicBehaviour -up-|> jade.core.behaviours.CyclicBehaviour


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
